# forgequeue

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  verify-public-demo.yml
crates/forgequeue-core/: Cargo.toml
crates/forgequeue-core/src/: lib.rs
crates/forgequeue-server/: Cargo.toml
crates/forgequeue-server/src/: api.rs  config.rs  db.rs  error.rs  main.rs  processors.rs  storage.rs  worker.rs
deploy/: grafana-datasources.yml  prometheus.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO.md  DEPLOYMENT.md
migrations/: 202607160001_initial.sql  202607160002_upload_events.sql
scripts/: benchmark.ps1  demo-recovery.ps1  deploy-koyeb.sh  smoke.sh  verify-deployment.sh
web/: Dockerfile  index.html  nginx.conf  openapi.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wrangler.toml
web/e2e/: portfolio.spec.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  schema.d.ts  types.ts
web/src/components/: app-shell.tsx  artifact-preview.tsx  attempt-timeline.tsx  backend-status.tsx  file-dropzone.test.tsx  file-dropzone.tsx  job-actions.tsx  job-table.test.tsx  job-table.tsx  status-badge.tsx
web/src/hooks/: use-job-events.ts
web/src/lib/: format.ts
web/src/pages/: home-page.tsx  job-detail-page.tsx  jobs-page.tsx  not-found-page.tsx
