[workspace]
members = [
  "crates/forgequeue-core",
  "crates/forgequeue-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["JoaFoschiatti"]
repository = "https://github.com/JoaFoschiatti/forgequeue"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["http2", "json", "multipart", "tokio"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
infer = "0.19"
lopdf = { version = "0.44", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
object_store = { version = "0.14", features = ["aws", "fs"] }
pdfium-render = { version = "0.9", features = ["image_latest", "pdfium_latest", "thread_safe"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5.4", features = ["chrono", "uuid"] }
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }

[profile.release]
lto = "thin"
strip = true
