[package]
name = "forgequeue-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
forgequeue-core = { path = "../forgequeue-core" }
futures-util.workspace = true
image.workspace = true
infer.workspace = true
lopdf.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
object_store.workspace = true
pdfium-render.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
